<?xml version="1.0"?>
<package format="2">
 <name>pf</name>
 <version>1.0.0</version>
 <description>Path Following Algorithm Test</description>

 <license>MIT</license>

 <author email="dsor@gmail.com">DSORTeam</author>
 <maintainer email="dsor@gmail.com">DSORTeam</maintainer>

 <buildtool_depend>catkin</buildtool_depend>
 <depend>message_generation</depend>
 <depend>message_runtime</depend>  
 <depend>std_msgs</depend>
 <depend>rospy</depend>

</package>