<?xml version="1.0"?>
<package format="2">
 <name>test_msgs</name>
 <version>1.0.0</version>
 <description>Messages for Path Following Algorithm Test</description>

 <license>MIT</license>

 <author email="dsor@gmail.com">DSORTeam</author>
 <maintainer email="dsor@gmail.com">DSORTeam</maintainer>

 <buildtool_depend>catkin</buildtool_depend>
 <depend>std_msgs</depend>

</package>